Fixed Some Bugs.
Bugs:
Mobile Reject:show too much

--- a/style.css
+++ b/style.css
@@ -87,5 +87,7 @@
 #mobwindow{
     text-align: center;
     display: none;
+    width: 100%;
+    height: 100%;
     padding: 16px;
 }
